# spotify_data_pipeline

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
data/minio_data/.minio.sys/: format.json
data/minio_data/.minio.sys/tmp/.trash/04e88440-815a-479e-8d66-af9f848008d6/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/223bf39a-8051-43bf-b8df-03d7e9e52994/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/2d2c2ce1-29ee-4c3f-8160-cfdda214a13d/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/5fcb2722-0908-4b75-9ae0-3bf9b347b408/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/97fd8883-4c45-4e96-bb46-1b70ee644627/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/99198f97-c28c-4271-8960-bfd1c1aa6533/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/9a1199aa-574c-4ead-9720-67b0b617fd3c/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/a3dc19f3-a1cc-4b4b-8caf-a0b8926454ff/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/c2fb8065-4438-44ff-b269-a35c9e640859/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/c38b1f59-d14f-4b3d-a55e-7e45cc949c26/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/d8699891-7bc7-4e3f-a37b-c0b6f45adf41/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/ed44e1de-4dba-4971-ac29-0f18705962e1/: xl.meta.bkp
scripts/: extract.ipynb  extract.py  load.ipynb  transform.ipynb  transform.py
utils/: minio_client.py
