[project]
name = "project-spotifyapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.0",
    "boto3>=1.42.91",
    "dotenv>=0.9.9",
    "duckdb>=1.5.2",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "spotify>=0.10.2",
]
